--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
+    "react-spring": "^9.3.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
