--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "private": true,
   "dependencies": {
     "@types/styled-components": "^5.1.15",
+    "axios": "^0.24.0",
     "chart.js": "^3.6.0",
     "polished": "^4.1.3",
     "react": "^17.0.2",
     "react-chartjs-2": "^3.3.0",
+    "react-content-loader": "^6.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-scripts": "4.0.3",
     "react-spring": "^9.3.0",
     "styled-components": "^5.3.3",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "zustand": "^3.6.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
