--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["node", "jest", "@testing-library/jest-dom"],
     "target": "es5",
     "lib": [
       "dom",
@@ -21,6 +22,12 @@
     "jsx": "react-jsx"
   },
   "include": [
-    "src"
-, "__tests__/App.test.tsx"  ]
+    "src/test-setup.ts",
+      "**/*.spec.ts",
+      "**/*.spec.tsx",
+      "**/*.spec.js",
+      "**/*.spec.jsx",
+      "**/*.d.ts"
+  ],
+
 }
